--- a/dashiji_1.html
+++ b/dashiji_1.html
@@ -91,7 +91,8 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
   <div class="content">
     <h1>班级大事记</h1>
     <p>&nbsp;</p>
-    <p>暂无内容</p>
+    <p>1.进行了入学考试，现成绩已出，可自行前往智学网(www.zhixue.com)查询成绩以及查看试卷。用户名及初始密码均为准考证号。</p>
+    <p>2.集体对本学期作出规划。</p>
     <h6>&nbsp;</h6>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
