--- a/heimingdan.html
+++ b/heimingdan.html
@@ -97,7 +97,8 @@ a:hover, a:active, a:focus { /* 此组选择器将为键盘导航者提供与鼠
   <div class="content">
     <h1> 批评榜</h1>
     <p>请以下提到的同学自我反省，争取早日离榜！</p>
-    <p>&nbsp;</p>
+    <p>吴誉腾 多次违纪</p>
+    <p>董宇辰 多次未戴口罩，提醒后不改。</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
     <p>&nbsp;</p>
