--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
       <li><a href="https://mywsleb.github.io/biaoyang.html">表扬榜</a></li>
     </ul>
     <p class="nav"> <a href="https://mywsleb.github.io/Chinese.html">语文专栏</a></p>
-    <p class="nav"><a href="https://mywsleb.github.io/Music/yinyue.html">音乐免费下载</a></p>
+    <p class="nav"><a href="https://mywsleb.github.io/yinyue.html">音乐免费下载</a></p>
     <p class="nav"><a href="https://mywsleb.github.io/bwqun.html">班委群</a></p>
     <p class="nav">&nbsp;</p>
     <p class="nav">&nbsp;</p>
