--- a/yinyue.html
+++ b/yinyue.html
@@ -7,20 +7,20 @@
 
 <body>
 <p>每周一歌免费下载：</p>
-<p><a href="https://mywsleb.github.io/Music/The Stecpre.mp3">The Stecpre.mp3       </a></p>
-<p><a href="https://mywsleb.github.io/Music/Summertime.mp3">Summertime.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Sorry.mp3">Sorry.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Routine.mp3">Routine.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Play.mp3">Play.mp3</a> </p>
-<p><a href="https://mywsleb.github.io/Music/On My Way.mp3">On My Way.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Legends Never Die.mp3">Legends Never Die.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/lgnite.mp3">lgnite.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Faded.mp3">Faded.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/End of Time.mp3">End of Time.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Darkside.mp3">Darkside.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Aurora.mp3">Aurora.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/Alone.mp3">Alone.mp3</a></p>
-<p><a href="https://mywsleb.github.io/Music/All Falls Down.mp3">All Falls Down.mp3</a></p>
+<p><a href="https://mywsleb.github.io/The Stecpre.mp3">The Stecpre.mp3       </a></p>
+<p><a href="https://mywsleb.github.io/Summertime.mp3">Summertime.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Sorry.mp3">Sorry.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Routine.mp3">Routine.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Play.mp3">Play.mp3</a> </p>
+<p><a href="https://mywsleb.github.io/On My Way.mp3">On My Way.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Legends Never Die.mp3">Legends Never Die.mp3</a></p>
+<p><a href="https://mywsleb.github.io/lgnite.mp3">lgnite.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Faded.mp3">Faded.mp3</a></p>
+<p><a href="https://mywsleb.github.io/End of Time.mp3">End of Time.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Darkside.mp3">Darkside.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Aurora.mp3">Aurora.mp3</a></p>
+<p><a href="https://mywsleb.github.io/Alone.mp3">Alone.mp3</a></p>
+<p><a href="https://mywsleb.github.io/All Falls Down.mp3">All Falls Down.mp3</a></p>
 <p>注意：以上歌曲均为官方原版，仅供学习交流使用，请支持正版，下载后请在24小时之内删除！</p>
 </body>
 </html>
