--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@ ul.nav a:hover, ul.nav a:active, ul.nav a:focus { /* 这将更改鼠标和键盘
     <h2>向360等安全软件公司申请安全证书，可能会被识别成</h2>
     <h2>木马病毒，直接信任即可。如<a href="https://mywsleb.github.io/website/xinren.html">如何信任？</a></h2>
     <h2>图书管理系统:</h2>
-    <p><a href="https://mywsleb.github.io/website/programs/2班图书管理系统V1.0.0-1.7z">2班图书管理系统V1.0.0-1.7z</a> </p>
-    <p><a href="https://mywsleb.github.io/website/programs/2班图书管理系统V1.0.0-2.7z">2班图书管理系统V1.0.0-2.7z</a> 下载<span class="header">两个</span>压缩包，</p>
+    <p><a href="https://mywsleb.github.io/website/programs/六二班图书管理系统V1.0.0-1.7z">2班图书管理系统V1.0.0-1.7z</a> </p>
+    <p><a href="https://mywsleb.github.io/website/programs/六二班图书管理系统V1.0.0-2.7z">2班图书管理系统V1.0.0-2.7z</a> 下载<span class="header">两个</span>压缩包，</p>
     <p><span class="header">解压到同一个文件夹</span>即可！</p>
     <p>文件总大小:52.8MB(54114KB)    </p>
     <h2>学生管理系统:</h2>
